--- a/automations/utilities/dishwasher_end.yaml
+++ b/automations/utilities/dishwasher_end.yaml
@@ -9,7 +9,7 @@ trigger:
   platform: numeric_state
   entity_id: sensor.dishwasher_7_1min
   below: 2
-  for: "00:00:10"
+  for: '00:01:30'
 
 condition:
   condition: state
