--- a/entities/templates/seedbox_vpn_on.yaml
+++ b/entities/templates/seedbox_vpn_on.yaml
@@ -7,4 +7,6 @@
     - name: Seedbox VPN on
       unique_id: dc9c2f6a-2e41-476f-8867-22e494a7c6bd
       icon: "mdi:vpn"
-      state: "{{ 'nordlynx' in state_attr('sensor.rpi_poat_seedbox_rpi_monitor_poat_seedbox', 'networking') }}"
+      state: "{{ 
+        ('nordlynx' in state_attr('sensor.rpi_poat_seedbox_rpi_monitor_poat_seedbox', 'networking')) 
+        if state_attr('sensor.rpi_poat_seedbox_rpi_monitor_poat_seedbox', 'networking') }}"
