--- a/ui_lovelace_minimalist/dashboard/views/lab.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/lab.yaml
@@ -77,6 +77,18 @@ cards:
                   return "var(--red-color)" ;
                   else return "var(--green-color)"; ]]]
 
+  - type: horizontal-stack
+    cards:
+      - type: custom:mini-graph-card
+        name: Share(s) %
+        icon: mdi:harddisk
+        unit: "%"
+        entities:
+          - sensor.aristodemos
+          - sensor.odysseus_used
+        show:
+          labels: true
+
   - type: "custom:button-card"
     template: card_title
     label: Raspberries - Control
@@ -256,3 +268,79 @@ cards:
           entity: sensor.rpi_poat_plex_rpi_monitor_poat_plex
           card_style: full
           name_prefix: ""
+
+  - type: "custom:button-card"
+    template: card_title
+    label: Z-Wave
+
+  - type: entities
+    title: 800 Series Z-Wave LR USB Hub
+    icon: mdi:z-wave
+    entities:
+      - entity: sensor.800_series_long_range_usb_controller_status
+        name: Status
+
+  - type: "custom:button-card"
+    template: card_title
+    label: Tasmota
+
+  - type: custom:stack-in-card
+    cards:
+      - type: custom:layout-card
+        layout_type: grid
+        layout_options:
+          grid-template-columns: repeat(5, 1fr)
+          grid-template-rows: repeat(2, 1fr)
+          grid-template-areas: |
+            "firmware firmware firmware ip ip"
+            "wifi wifi rssi restart restart"
+          margin: 0
+          padding: 0
+          card_margin: 0
+        margin: 0px
+        cards:
+          - type: 'custom:button-card'
+            template:
+              - card_generic_swap
+            entity: sensor.tasmota_firmware_version
+            variables:
+              ulm_card_generic_swap_name: Sonoff RF Bridge (Tasmota)
+              ulm_card_generic_swap_icon: 'mdi:broadcast'
+            view_layout:
+              grid-area: firmware
+          - type: "custom:button-card"
+            template: custom_card_mpse_wifisignal
+            entity: sensor.tasmota_signal
+            name: '[[[ return states["sensor.tasmota_ssid"].state + " (" + states["sensor.tasmota_wifi_connect_count"].state + ")"]]]'
+            view_layout:
+              grid-area: wifi
+          - type: custom:mushroom-template-card
+            primary: "{{ 'Connections: ' + states('sensor.tasmota_wifi_connect_count') }}"
+            secondary: "{{ states('sensor.tasmota_ip') }}"
+            view_layout:
+              grid-area: ip
+            card_mod:
+              style: |
+                ha-card {
+                  text-align: center;
+                }
+          - type: custom:mushroom-template-card
+            primary: "{{ 'Clients: ' + states('sensor.tasmota_mqtt_connect_count') }}"
+            secondary: "{{ 'RSII ' + states('sensor.tasmota_rssi') + '%' }}"
+            view_layout:
+              grid-area: rssi
+            card_mod:
+              style: |
+                ha-card {
+                  text-align: center;
+                }
+          - type: custom:mushroom-template-card
+            primary: "{{ states('sensor.tasmota_restart_reason') }}"
+            secondary: "{{ states('sensor.tasmota_last_restart_time') }}"
+            view_layout:
+              grid-area: restart
+            card_mod:
+              style: |
+                ha-card {
+                  text-align: center;
+                }
