--- a/automations/lab/seedbox_vpn_off.yaml
+++ b/automations/lab/seedbox_vpn_off.yaml
@@ -1,20 +1,22 @@
 #####
 # Alert when seedbox VPN is not running
-
 #####
 
 alias: Seedbox VPN off alert
 id: 4cf2336b-949f-4241-adf7-2da850ab74ac
+
 trigger:
   - platform: state
     entity_id: sensor.seedbox_vpn_on
-    to: 'False'
+    to: "False"
+    for: "00:01:00"
+
 action:
   - service: notify.persistent_notification
     data:
-      message: 'VPN is not running on the seedbox.'
-      title: '🔐 VPN Seedbox Alert!'
+      message: "VPN is not running on the seedbox."
+      title: "🔐 VPN Seedbox Alert!"
   - service: notify.mobile_app_poat_s_iphone_14_pro_max
     data:
-      message: 'VPN is not running on the seedbox.'
-      title: '🔐 VPN Seedbox Alert!'
+      message: "VPN is not running on the seedbox."
+      title: "🔐 VPN Seedbox Alert!"
